# dose2gmsh

./: .gitattributes  Cargo.toml  README.md
props/: rect.3ddose  water_block.3ddose
src/: lib.rs  main.rs
