[package]
name = "dose2gmsh"
version = "0.1.0"
authors = ["Max Orok <morok@mevex.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Convert EGSnrc 3ddose files to Gmsh mesh files"
repository = "https://github.com/mxxo/dose2gmsh"
keywords = ["EGSnrc", "Gmsh", "cli", "medical", "physics"]
categories = ["command-line-utilities", "science", "visualization"]
exclude = ["props/"]

[dependencies]
structopt = "0.3.8"
itertools = "0.8.2"

[dev-dependencies]
csv = "1.1.3"
approx = "0.3.2"
